# light-mbse-pipeline-skeleton

./: .gitignore  CALC.md  CMakeLists.txt  METRICS.md  README.md  SPEC.md  VALIDATION.md  arm-toolchain.cmake  start.sh
logs/: test_stm32_parsed.csv  test_summary.txt
ltspice/: LTSPICE.md
octave/: OCTAVE.md  main.m  validation.m
octave/utils/: generate_sensor_lut.m  generate_spec_markdown.m  parse_potentiometer_data.m  parse_potentiometer_properties.m  parse_test_table.m
octave/validation/: generate_validation_sum.m
references/: DATASHEETS.md  Potentiometer-Data.csv  Potentiometer-Properties.csv
renode/: RENODE.md  test_run.resc
src/core/: sensor.cpp
src/includes/: sensor.h  sensor_lut.h
tests/posix/: test_sensor.cpp
tests/stm32/: startup.c  stm32f4.ld  test_sensor_stm32.cpp
